update base url SectorCon/gangways-hugo@ab8b7874f0f7672b809160f1594735f7ae2d4e65

--- a/innocy/index.html
+++ b/innocy/index.html
@@ -14,19 +14,19 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 <meta property="og:description" content="Monitoring der Innovationspolitik in Echtzeit Die Innovationspolitik ist ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.
 Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/innocy/"><meta property="article:section" content>
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/innocy/"><meta property="article:section" content>
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
-<section class="page-title bg-2" style=background-image:url(/gangways/images/europe.jpg)>
+<section class="page-title bg-2" style=background-image:url(/images/europe.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
@@ -71,7 +71,7 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 </div>
 </div>
 <div class=col-md-4>
-<img class="img-responsive img-single-page" src=/gangways/images/iStock-1190765499.jpg alt=Innocy>
+<img class="img-responsive img-single-page" src=/images/iStock-1190765499.jpg alt=Innocy>
 </div>
 </div>
 </div>
@@ -82,9 +82,9 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -93,12 +93,12 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
