--- a/press/index.html
+++ b/press/index.html
@@ -11,19 +11,19 @@
 <meta property="og:title" content="Pressematerial">
 <meta property="og:description" content="Pressematerial Logos Bildmaterial Textbeiträge ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/press/"><meta property="article:section" content>
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/press/"><meta property="article:section" content>
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
-<section class="page-title bg-2" style=background-image:url(/gangways/images/banner2.jpg)>
+<section class="page-title bg-2" style=background-image:url(/images/banner2.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
@@ -35,7 +35,7 @@
 </div>
 </div>
 </section>
-<section class=partnerfooter-container style=background-image:url(/gangways/)>
+<section class=partnerfooter-container style="background-image:url('/')">
 <div class=container>
 <div class=row>
 <div class="col-md-12 col-sm-12">
@@ -48,28 +48,28 @@
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.bmwi.de target=_blank>
-<img src=/gangways/images/logos/bmwk.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bmwk.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.tu.berlin/ target=_blank>
-<img src=/gangways/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.charite.de target=_blank>
-<img src=/gangways/images/logos/Charite.svg.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/Charite.svg.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -77,28 +77,28 @@
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 </div>
 </div>
 </section>
-<section class=partnerfooter-container style=background-image:url(/gangways/)>
+<section class=partnerfooter-container style="background-image:url('/')">
 <div class=container>
 <div class=row>
 <div class="col-md-12 col-sm-12">
@@ -111,28 +111,28 @@
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.bmwi.de target=_blank>
-<img src=/gangways/images/logos/bmwk.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bmwk.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.tu.berlin/ target=_blank>
-<img src=/gangways/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.charite.de target=_blank>
-<img src=/gangways/images/logos/Charite.svg.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/Charite.svg.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -140,21 +140,21 @@
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class=partnerfooter-item>
 <a href=https://www.sectorcon.de/ target=_blank>
-<img src=/gangways/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/sectorcon.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -167,9 +167,9 @@
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -178,12 +178,12 @@
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
