--- a/404.html
+++ b/404.html
@@ -11,14 +11,14 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="SectorCon Ingenieurgesellschaft mbH">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/404.html">
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/404.html">
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
@@ -29,7 +29,7 @@
 <div class=col-md-12>
 <h1>404</h1>
 <h2 class=text-muted>Tut uns leid – diese Seite scheint nicht (mehr) hier zu sein.</h2>
-<a href=/gangways/ class="btn btn-main"><i class=tf-ion-android-arrow-back></i> Zur Startseite</a>
+<a href=/ class="btn btn-main"><i class=tf-ion-android-arrow-back></i> Zur Startseite</a>
 </div>
 </div>
 </div>
@@ -40,9 +40,9 @@
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -51,12 +51,12 @@
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
