--- a/foyer/index.html
+++ b/foyer/index.html
@@ -11,19 +11,19 @@
 <meta property="og:title" content="Foyer">
 <meta property="og:description" content="FOYER ist ein innovatives Verfahren zur Authentifizierung, Validierung und vollautomatischen Weiterverarbeitung von interaktiven Formularen. Es zeichnet sich durch eine schlanke und flexible Architektur und hohen Komfort in der Benutzung aus.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/foyer/"><meta property="article:section" content>
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/foyer/"><meta property="article:section" content>
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
-<section class="page-title bg-2" style=background-image:url(/gangways/images/europe.jpg)>
+<section class="page-title bg-2" style=background-image:url(/images/europe.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
@@ -66,7 +66,7 @@
 </div>
 </div>
 <div class=col-md-4>
-<img class="img-responsive img-single-page" src=/gangways/images/iStock-1143672593.jpg alt=Foyer>
+<img class="img-responsive img-single-page" src=/images/iStock-1143672593.jpg alt=Foyer>
 </div>
 </div>
 </div>
@@ -77,9 +77,9 @@
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -88,12 +88,12 @@
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
