--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <meta property="og:title" content>
 <meta property="og:description" content="SectorCon Ingenieurgesellschaft mbH">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/">
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/">
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
 <style>.overly::before{opacity:.5}</style>
-<section class="home-banner slider overly" style=background-image:url(/gangways/)>
+<section class="home-banner slider overly" style="background-image:url('/')">
 <video autoplay muted loop id=bg-video>
-<source src=/gangways/videos/Istock-1218124258.mp4 type=video/mp4>
+<source src=/videos/Istock-1218124258.mp4 type=video/mp4>
 </video>
 <div class="container fullsize vcenter">
 <div class=row>
@@ -36,7 +36,7 @@
 <div class=banner-claim>
 <p>Mehr Transparenz durch das Echtzeit-Monitoring</br> von innovationspolitischen Prozessen</p>
 </div>
-<a href=/gangways/#about class="btn btn-main animated fadeInUp">mehr erfahren</a>
+<a href=/#about class="btn btn-main animated fadeInUp">mehr erfahren</a>
 </div>
 </div>
 </div>
@@ -59,7 +59,7 @@
 <p>Nichtinvasives physiologisches Monitoring</p>
 </div>
 <a href=./foyer>
-<img src=/gangways/images/iStock-1143672593.jpg class="img-responsive img-projects" alt>
+<img src=/images/iStock-1143672593.jpg class="img-responsive img-projects" alt>
 </a>
 </div>
 </div>
@@ -70,7 +70,7 @@
 <p>Monitoring der Innovationspolitik</p>
 </div>
 <a href=./innocy>
-<img src=/gangways/images/iStock-1190765499.jpg class="img-responsive img-projects" alt>
+<img src=/images/iStock-1190765499.jpg class="img-responsive img-projects" alt>
 </a>
 </div>
 </div>
@@ -80,7 +80,7 @@
 <h3>LUCY</h3>
 <p>Datenverwaltung für die Projektförderung</p>
 </div>
-<img src=/gangways/images/iStock-1186213488.jpg class="img-responsive img-projects" alt>
+<img src=/images/iStock-1186213488.jpg class="img-responsive img-projects" alt>
 </div>
 </div>
 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -89,26 +89,26 @@
 <h3>TRACY</h3>
 <p>Observability für Projektträger</p>
 </div>
-<img src=/gangways/images/iStock-1188371301.jpg class="img-responsive img-projects" alt>
+<img src=/images/iStock-1188371301.jpg class="img-responsive img-projects" alt>
 </div>
 </div>
 </div><div class=row>
 </div>
 </div>
 </section>
-<section class="call-to-action bg-1 section-sm overly" style=background-image:url(/gangways/images/europe.jpg)>
+<section class="call-to-action bg-1 section-sm overly" style=background-image:url(/images/europe.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
 <div class=block>
 <h2>Unterstützung der politischen Arbeit auf dem Weg zur technologischen Souveränität und nachhaltigen Wirtschaft in Deutschland und Europa.</h2>
-<a class="btn btn-main btn-solid-border" href=/gangways/#contact>Kontakt aufnehmen</a>
+<a class="btn btn-main btn-solid-border" href=/#contact>Kontakt aufnehmen</a>
 </div>
 </div>
 </div>
 </div>
 </section>
-<section class="contact-container bg-gray" id=contact style="background-image:url(/gangways/images/berlin-2424516_1920b.png);background-repeat:no-repeat;background-size:auto 100%;background-position-x:right">
+<section class="contact-container bg-gray" id=contact style="background-image:url(/images/berlin-2424516_1920b.png);background-repeat:no-repeat;background-size:auto 100%;background-position-x:right">
 <div class=container>
 <div class="contact-box row">
 <div class="col-md-4 col-sm-12">
@@ -130,7 +130,7 @@ Germany</div></li>
 <div class=block>
 <h2>Unsere Unternehmensgruppe</h2>
 <a href=https://sector.de target=_blank>
-<img src=/gangways/images/sectorcon-group.svg class="img-responsive img-group" alt>
+<img src=/images/sectorcon-group.svg class="img-responsive img-group" alt>
 </a>
 </div>
 </div>
@@ -144,9 +144,9 @@ Germany</div></li>
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -155,12 +155,12 @@ Germany</div></li>
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
