--- a/legal/index.html
+++ b/legal/index.html
@@ -38,19 +38,19 @@ Telefon: 030 / 347 945 0
 E-Mail: kontakt@sector.de
 Registereintrag: Registergericht: Amtsgericht Berlin-Charlottenburg">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/legal/"><meta property="article:section" content>
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/legal/"><meta property="article:section" content>
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
-<section class="page-title bg-2" style=background-image:url(/gangways/images/banner2.jpg)>
+<section class="page-title bg-2" style=background-image:url(/images/banner2.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
@@ -110,9 +110,9 @@ Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unt
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -121,12 +121,12 @@ Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unt
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
