--- a/partner/index.html
+++ b/partner/index.html
@@ -11,19 +11,19 @@
 <meta property="og:title" content="Unsere Partner">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://teststage.aurelia-med.de/gangways/partner/"><meta property="article:section" content>
-<link rel=stylesheet href=/gangways/plugins/bootstrap/css/bootstrap.min.css media=screen>
-<link rel=stylesheet href=/gangways/plugins/ionicons/css/ionicons.min.css>
-<link rel=stylesheet href=/gangways/plugins/magnific-popup/magnific-popup.min.css>
-<link rel=stylesheet href=/gangways/plugins/slick/slick.css>
-<link rel=stylesheet href=/gangways/scss/bundled.min.css media=screen>
-<link rel="shortcut icon" href=/gangways/images/favicon.png type=image/x-icon>
-<link rel=icon href=/gangways/images/favicon.png type=image/x-icon>
+<meta property="og:url" content="https://gangways.eu/partner/"><meta property="article:section" content>
+<link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
+<link rel=stylesheet href=/plugins/ionicons/css/ionicons.min.css>
+<link rel=stylesheet href=/plugins/magnific-popup/magnific-popup.min.css>
+<link rel=stylesheet href=/plugins/slick/slick.css>
+<link rel=stylesheet href=/scss/bundled.min.css media=screen>
+<link rel="shortcut icon" href=/images/favicon.png type=image/x-icon>
+<link rel=icon href=/images/favicon.png type=image/x-icon>
 </head>
 <body>
 <div class=preloader>
 </div>
-<section class="page-title bg-2" style=background-image:url(/gangways/images/istockphoto-637416508-1024x1024.jpg)>
+<section class="page-title bg-2" style=background-image:url(/images/istockphoto-637416508-1024x1024.jpg)>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
@@ -35,7 +35,7 @@
 </div>
 </div>
 </section>
-<section class=partnerfooter-container style=background-image:url(/gangways/)>
+<section class=partnerfooter-container style="background-image:url('/')">
 <div class=container>
 <div class=row>
 <div class="col-md-12 col-sm-12">
@@ -48,28 +48,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.charite.de target=_blank>
-<img src=/gangways/images/logos/charite.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/charite.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.ihu-strasbourg.eu target=_blank>
-<img src=/gangways/images/logos/ihu.jpg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/ihu.jpg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.tu.berlin target=_blank>
-<img src=/gangways/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/tu.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.dhzb.de target=_blank>
-<img src=/gangways/images/logos/dhzb.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/dhzb.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -77,28 +77,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.vdivde-it.de target=_blank>
-<img src=/gangways/images/logos/vdivdeit.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/vdivdeit.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.euronorm.de target=_blank>
-<img src=/gangways/images/logos/euronorm.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/euronorm.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.bmwk.de target=_blank>
-<img src=/gangways/images/logos/bmwk.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bmwk.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.bmi.bund.de target=_blank>
-<img src=/gangways/images/logos/bmi.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bmi.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -106,28 +106,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.bmbf.de target=_blank>
-<img src=/gangways/images/logos/bmbf.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bmbf.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.bis-bremerhaven.de target=_blank>
-<img src=/gangways/images/logos/bis.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bis.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.wfb-bremen.de target=_blank>
-<img src=/gangways/images/logos/wfb.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/wfb.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.bab-bremen.de target=_blank>
-<img src=/gangways/images/logos/bab.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/bab.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -135,28 +135,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.siemens.com target=_blank>
-<img src=/gangways/images/logos/siemens.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/siemens.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.kaercher.com/de/ target=_blank>
-<img src=/gangways/images/logos/kaercher.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/kaercher.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.safran-engineering.com/ target=_blank>
-<img src=/gangways/images/logos/safran.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/safran.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.hhi.fraunhofer.de target=_blank>
-<img src=/gangways/images/logos/hhi.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/hhi.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -164,28 +164,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.synios.de target=_blank>
-<img src=/gangways/images/logos/synios.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/synios.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.id-berlin.de target=_blank>
-<img src=/gangways/images/logos/id.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/id.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.fh-dortmund.de target=_blank>
-<img src=/gangways/images/logos/fhdortmund.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/fhdortmund.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.ipa.fraunhofer.de target=_blank>
-<img src=/gangways/images/logos/ipa.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/ipa.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -193,28 +193,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.reutlingen-university.de target=_blank>
-<img src=/gangways/images/logos/hsreutlingen.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/hsreutlingen.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.iccas.de target=_blank>
-<img src=/gangways/images/logos/iccas.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/iccas.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.uniklinikum-leipzig.de target=_blank>
-<img src=/gangways/images/logos/uniklinikleipzig.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/uniklinikleipzig.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.volkswagen.de target=_blank>
-<img src=/gangways/images/logos/vw.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/vw.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -222,28 +222,28 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.audi.de target=_blank>
-<img src=/gangways/images/logos/audi.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/audi.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://apus-zero.de target=_blank>
-<img src=/gangways/images/logos/apus.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/apus.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.ftigroup.net target=_blank>
-<img src=/gangways/images/logos/fti.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/fti.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://aquila-aviation.de target=_blank>
-<img src=/gangways/images/logos/aquila.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/aquila.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -251,21 +251,21 @@
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.boutsen.com target=_blank>
-<img src=/gangways/images/logos/boutsen.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/boutsen.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://consulting.tuv.com target=_blank>
-<img src=/gangways/images/logos/tuev.svg class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/tuev.svg class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
 <div class="col-sm-3 col-md-3">
 <div class="partnerpage-item bg-gray vcenter">
 <a href=https://www.ptka.kit.edu target=_blank>
-<img src=/gangways/images/logos/ptka.png class="img-responsive img-partnerfooter" alt>
+<img src=/images/logos/ptka.png class="img-responsive img-partnerfooter" alt>
 </a>
 </div>
 </div>
@@ -278,9 +278,9 @@
 <div class=col-md-12>
 <div class=footer-menu>
 <ul>
-<li><a href=/gangways>Home</a></li>
-<li><a href=/gangways/legal>Impressum</a></li>
-<li><a href=/gangways/privacy>Datenschutz</a></li>
+<li><a href=/.>Home</a></li>
+<li><a href=/legal>Impressum</a></li>
+<li><a href=/privacy>Datenschutz</a></li>
 <li><a href=https://www.sector.de/press>Pressematerial</a></li>
 </ul>
 </div>
@@ -289,12 +289,12 @@
 </div>
 </div>
 </footer>
-<script src=/gangways/plugins/jquery/jquery.min.js></script>
-<script src=/gangways/plugins/bootstrap/js/bootstrap.min.js></script>
-<script src=/gangways/plugins/slick/slick.min.js></script>
-<script src=/gangways/plugins/magnific-popup/magnific-popup.min.js></script>
-<script src=/gangways/plugins/shuffle/shuffle.min.js></script>
-<script src=/gangways/plugins/google-map/gmap.js defer></script>
-<script src=/gangways/js/bundled.min.js></script>
+<script src=/plugins/jquery/jquery.min.js></script>
+<script src=/plugins/bootstrap/js/bootstrap.min.js></script>
+<script src=/plugins/slick/slick.min.js></script>
+<script src=/plugins/magnific-popup/magnific-popup.min.js></script>
+<script src=/plugins/shuffle/shuffle.min.js></script>
+<script src=/plugins/google-map/gmap.js defer></script>
+<script src=/js/bundled.min.js></script>
 </body>
 </html>
