add sub-pagetitle SectorCon/gangways-hugo@cec9d7159abb36da3f8dfc600a9ddab22b1eae8b

--- a/innocy/index.html
+++ b/innocy/index.html
@@ -32,6 +32,7 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 <div class=col-md-12>
 <div class=block>
 <h1>Innocy</h1>
+<h2>Monitoring der Innovationspolitik in Echtzeit</h2>
 <p></p>
 </div>
 </div>
